--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.30</version>
 		</dependency>
 
 		<!-- Druid DataSource -->
@@ -91,7 +92,16 @@
 		    <artifactId>batik-svggen</artifactId> 
 		    <version>${apache.xmlgraphics.version}</version> 
 	    </dependency>
-	   
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-engine</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
