--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,8 @@ server:
 spring:
   profiles: dev
   datasource:
-    url: jdbc:mysql://localhost:3306/activiti6?useUnicode=true&useSSL=false&amp;characterEncoding=utf8&allowMultiQueries=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/activiti6?useUnicode=true&useSSL=false&characterEncoding=utf8&allowMultiQueries=true&nullCatalogMeansCurrent=true
     username: root
     password: 123456
 
